# tiny-chinese-lunar-calendar

./: .gitignore  Cargo.toml  README.md  build.rs  qweather.local.example.json  qweather.public.pem  r2.local.example.json  signing.local.example.json  wrangler.jsonc
.cargo/: config.toml
appcast/: appcast.xml  sparkle_public_key.txt
assets/icon/: icon.icns
docs/releases/: 0.1.2.md  0.2.0.md  0.2.1.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md
packaging/homebrew/: README.md
packaging/homebrew/Casks/: xiaoxiao-wannianli.rb
scripts/: build-app.sh  build-dmg.sh  build-update-zip.sh  download-sparkle.sh  generate-appcast.sh  publish-release.sh
scripts/lib/: md2html.py  version.sh
site/: index.html  robots.txt  sitemap.xml
src/: app.rs  auto_return.rs  fontload.rs  main.rs  models.rs  settings.rs  textfit.rs  updater.rs
src/services/: calendar.rs  date_humanized.rs  holiday.rs  international_festivals.rs  location.rs  mod.rs  qweather_jwt.rs  weather.rs
src/tray/: icon.rs  macos.rs  mod.rs  render.rs
src/updater/: network.rs
ui/: app.slint  components.slint  main-window.slint  settings-window.slint  theme.slint
